--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FireAuthBoilerPlate</string>
+    <string name="facebook_app_id">857933798245745</string>
+
 </resources>
+ 
