--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">FireAuthBoilerPlate</string>
     <string name="facebook_app_id">857933798245745</string>
-
+<string name="fb_login_protocol_scheme">fb857933798245745</string>
 </resources>
  
